--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                     <td>PMD</td>
                     <td><a href="https://github.com/pmd/pmd/issues/4070">Link</a></td>
                     <td>Compound expression</td>
-                    <td>Pending</td>
+                    <td>Fixed</td>
                 </tr>
                 <tr>
                     <td>PMD</td>
