--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <td>checkstyle</td>
                     <td><a href="https://github.com/checkstyle/checkstyle/issues/11569">Link</a></td>
                     <td>Class hierarchy</td>
-                    <td>Confirmed</td>
+                    <td>Fixed</td>
                 </tr>
                 <tr>
                     <td>checkstyle</td>
