--- a/index.html
+++ b/index.html
@@ -524,6 +524,12 @@
             <h2 id="code">Open Source</h2>
             <ul>
                 <p>
+                    Please refer to the author's homepage to check the camera-ready paper: <a href="https://huaien.site/">[Link]</a>
+                </p>
+            </ul>
+            <h2 id="code">Open Source</h2>
+            <ul>
+                <p>
                     Open-source <a href="https://github.com/SA-Research/SourceCode">[Link]</a>
                 </p>
             </ul>
