--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                     <td>Fixed</td>
                 </tr>
             </table>
-            <h2 id="code">Open Source</h2>
+            <h2 id="code">Paper</h2>
             <ul>
                 <p>
                     Please refer to the author's homepage to check the camera-ready paper: <a href="https://huaien.site/">[Link]</a>
