--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
             <h2 id="code">Open Source</h2>
             <ul>
                 <p>
-                    Open-source <a href="https://github.com/SA-Research/SourceCode">[Link]</a>
+                    Open-source <a href="https://github.com/cshezhang/Statfier">[Link]</a>
                 </p>
             </ul>
             <h2 id="timeout">Timeout Selection</h2>
